--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -5,7 +5,8 @@
   "item.forgero.vines": "Vines",
   "item.forgero.twisting_vines": "Twisting Vines",
   "item.forgero.weeping_vines": "Weeping Vines",
-  "item.forgero.secondary_material": "Soft Material",
+  "item.forgero.soft_material": "Soft Material",
+  "item.forgero.hard_material": "Hard Material",
   "item.forgero.deepslate": "Deepslate",
   "item.forgero.calcite": "Calcite",
   "item.forgero.oak": "Oak",
@@ -31,6 +32,17 @@
   "item.forgero.diamond": "Diamond",
   "item.forgero.netherite": "Netherite",
   "item.forgero.soft_binding": "Soft Binding",
+  "item.forgero.kelp": "Kelp",
+  "item.forgero.basalt": "Basalt",
+  "item.forgero.blackstone": "Blackstone",
+  "item.forgero.bone": "Bone",
+  "item.forgero.end_stone": "End Stone",
+  "item.forgero.netherrack": "Netherrack",
+  "item.forgero.tuff": "Tuff",
+  "item.forgero.amethyst": "Amethyst",
+  "item.forgero.echo": "Echo",
+  "item.forgero.flint": "Flint",
+  "item.forgero.prismarine": "Prismarine",
   "condition.forgero.carved": "Carved",
   "condition.forgero.durable": "Durable",
   "condition.forgero.hardened": "Hardened",
