Added dye slots on VANILLA TOOLS Added all dyes as materials and their respective palettes Removed trinkets on ALL tools (this includes everything in the extended packages) Some small tweaks on existing palettes

--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -42,7 +42,24 @@
   "item.forgero.amethyst": "Amethyst",
   "item.forgero.echo": "Echo",
   "item.forgero.flint": "Flint",
-  "item.forgero.prismarine": "Prismarine",
+  "item.forgero.prismarine_shard": "Prismarine",
+  "item.forgero.dye": "Dye",
+  "item.forgero.black_dye": "Black Dye",
+  "item.forgero.blue_dye": "Blue Dye",
+  "item.forgero.brown_dye": "Brown Dye",
+  "item.forgero.cyan_dye": "Cyan Dye",
+  "item.forgero.gray_dye": "Gray Dye",
+  "item.forgero.green_dye": "Green Dye",
+  "item.forgero.light_blue_dye": "Light Blue Dye",
+  "item.forgero.light_gray_dye": "Light Gray Dye",
+  "item.forgero.lime_dye": "Lime Dye",
+  "item.forgero.magenta_dye": "Magenta Dye",
+  "item.forgero.orange_dye": "Orange Dye",
+  "item.forgero.pink_dye": "Pink Dye",
+  "item.forgero.purple_dye": "Purple Dye",
+  "item.forgero.red_dye": "Red Dye",
+  "item.forgero.white_dye": "White Dye",
+  "item.forgero.yellow_dye": "Yellow Dye",
   "condition.forgero.carved": "Carved",
   "condition.forgero.durable": "Durable",
   "condition.forgero.hardened": "Hardened",
