Redid a couple of the minerals to fit reallife hardness/weight Redstone, Slime attributes added Scales Redone Nether Wart and Chorus Fruit added

--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -60,6 +60,9 @@
   "item.forgero.red_dye": "Red Dye",
   "item.forgero.white_dye": "White Dye",
   "item.forgero.yellow_dye": "Yellow Dye",
+  "item.forgero.nether_wart": "Nether Wart",
+  "item.forgero.chorus_fruit": "Chorus Fruit",
+  "item.forgero.slimeball": "Slimeball",
   "condition.forgero.carved": "Carved",
   "condition.forgero.durable": "Durable",
   "condition.forgero.hardened": "Hardened",
