Added some more language file stuff Fixed crystals palette Removed stuff that was not used

--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -40,7 +40,7 @@
   "item.forgero.netherrack": "Netherrack",
   "item.forgero.tuff": "Tuff",
   "item.forgero.amethyst": "Amethyst",
-  "item.forgero.echo": "Echo",
+  "item.forgero.echo": "Echo Shard",
   "item.forgero.flint": "Flint",
   "item.forgero.prismarine_shard": "Prismarine",
   "item.forgero.dye": "Dye",
@@ -63,6 +63,11 @@
   "item.forgero.nether_wart": "Nether Wart",
   "item.forgero.chorus_fruit": "Chorus Fruit",
   "item.forgero.slimeball": "Slimeball",
+  "item.forgero.prismarine_crystals": "Prismarine Crystals",
+  "item.forgero.nautilus_shell": "Nautilus Shell",
+  "item.forgero.shulker_shell": "Shulker Shell",
+  "item.forgero.obsidian": "Obsidian",
+  "item.forgero.crying_obsidian": "Crying Obsidian",
   "condition.forgero.carved": "Carved",
   "condition.forgero.durable": "Durable",
   "condition.forgero.hardened": "Hardened",
