Added dye slots to extended tools Added dragon scale

--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -2,6 +2,7 @@
   "itemGroup.forgero.gems": "Gems",
   "itemGroup.forgero.trinkets": "Trinkets",
   "itemGroup.forgero.materials": "Materials",
+  "item.forgero.dragon_scale": "Dragon Scale",
   "item.forgero.gem": "Gem",
   "item.forgero.soul": "Soul",
   "item.forgero.totem": "Totem",
