ADDED DYE SLOTS TO ALL EXTENDED STUFF changed prismarine and echo palettes to fit Siggs suggestion. Added "reinforcement" description for guards slot

--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+  "item.forgero.pommel": "Pommel",
+  "item.forgero.reinforcement": "Reinforcement",
   "item.forgero.scrappy_binding": "Scrappy Binding",
   "item.forgero.simple_handle": "Simple Handle",
   "item.forgero.string": "String",
