--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -26,8 +26,8 @@
   "item.forgero.broadsword_blade": "Broadsword Blade",
   "item.forgero.shortsword_blade": "Shortsword Blade",
   "item.forgero.refined_sword_blade": "Refined Sword Blade",
-  "item.forgero.refined_pummel": "Refined Pommel",
-  "item.forgero.mastercrafted_pummel": "Mastercrafted Pommel",
+  "item.forgero.refined_pommel": "Refined Pommel",
+  "item.forgero.mastercrafted_pommel": "Mastercrafted Pommel",
   "item.forgero.mastercrafted_sword_blade": "Mastercrafted Sword Blade",
   "item.forgero.serrated_sword_blade": "Serrated Sword Blade",
   "item.forgero.scimitar_blade": "Scimitar Blade",
