feat: Add cherry wood to language file

--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -11,6 +11,7 @@
   "item.forgero.hard_material": "Hard Material",
   "item.forgero.deepslate": "Deepslate",
   "item.forgero.calcite": "Calcite",
+  "item.forgero.cherry": "Cherry",
   "item.forgero.oak": "Oak",
   "item.forgero.spruce": "Spruce",
   "item.forgero.birch": "Birch",
