--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -49,5 +49,6 @@
   "condition.forgero.tough": "Tough",
   "condition.forgero.trimmed": "Trimmed",
   "condition.forgero.rare": "Rare",
-  "condition.forgero.unbreakable": "Unbreakable"
+  "condition.forgero.unbreakable": "Unbreakable",
+  "condition.forgero.broken": "Broken"
 }
