New type system to allow for "upgrade material" and "soft_material" slots THE LAST OF THE LAST MATERIALS I SWEAR (DID NOT BALANCE)

--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -67,6 +67,28 @@
   "item.forgero.nether_wart": "Nether Wart",
   "item.forgero.chorus_fruit": "Chorus Fruit",
   "item.forgero.slimeball": "Slimeball",
+  "item.forgero.lily_pad": "Lily Pad",
+  "item.forgero.feather": "Feather",
+  "item.forgero.stone": "Stone",
+  "item.forgero.coal": "Coal",
+  "item.forgero.charcoal": "Charcoal",
+  "item.forgero.lapis_lazuli": "Lapis Lazuli",
+  "item.forgero.end_crystal": "End Crystal",
+  "item.forgero.ender_pearl": "Ender Pearl",
+  "item.forgero.fermented_spider_eye": "Fermented Spider Eye",
+  "item.forgero.ghast_tear": "Ghast Tear",
+  "item.forgero.magma_cream": "Magma Cream",
+  "item.forgero.sugar_cane": "Sugar Cane",
+  "item.forgero.blaze_powder": "Blaze Powder",
+  "item.forgero.honeycomb": "Honeycomb",
+  "item.forgero.fire_charge": "Fire Charge",
+  "item.forgero.brown_mushroom": "Brown Mushroom",
+  "item.forgero.red_mushroom": "Red Mushroom",
+  "item.forgero.crimson_fungus": "Crimson Fungus",
+  "item.forgero.warped_fungus": "Warped Fungus",
+  "item.forgero.popped_chorus_fruit": "Popped Chorus Fruit",
+  "item.forgero.hybrid_material": "Hybrid Material",
+  "item.forgero.blaze_rod": "Blaze Rod",
   "item.forgero.prismarine_crystals": "Prismarine Crystals",
   "item.forgero.nautilus_shell": "Nautilus Shell",
   "item.forgero.shulker_shell": "Shulker Shell",
