Okay I am done for some time with stats LET IT ROLL OUT

--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -71,6 +71,9 @@
   "item.forgero.feather": "Feather",
   "item.forgero.stone": "Stone",
   "item.forgero.coal": "Coal",
+  "item.forgero.slot_material": "Slot Material",
+  "item.forgero.upgrade_material": "Material",
+  "item.forgero.ender_eye": "Eye Of Ender",
   "item.forgero.charcoal": "Charcoal",
   "item.forgero.lapis_lazuli": "Lapis Lazuli",
   "item.forgero.end_crystal": "End Crystal",
