* Added models for bamboo handle * Added translation entry for bamboo * Added support for specifying a selected palette in a model file

--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -13,6 +13,7 @@
   "item.forgero.deepslate": "Deepslate",
   "item.forgero.calcite": "Calcite",
   "item.forgero.cherry": "Cherry",
+  "item.forgero.bamboo": "Bamboo",
   "item.forgero.oak": "Oak",
   "item.forgero.spruce": "Spruce",
   "item.forgero.birch": "Birch",
