--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -127,6 +127,31 @@
   "item.forgero.stalagnate": "Stalagnate",
   "item.forgero.wart": "Wart",
   "item.forgero.willow": "Willow",
-  "item.forgero.stick": "Stick"
+  "item.forgero.stick": "Stick",
+  "item.forgero.aspen": "Aspen",
+  "item.forgero.baobab": "Baobab",
+  "item.forgero.blue_enchanted": "Blue Enchanted Wood",
+  "item.forgero.bulbis": "Bulbis",
+  "item.forgero.cika": "Cika",
+  "item.forgero.cypress": "Cypress",
+  "item.forgero.ebony": "Ebony",
+  "item.forgero.embur": "Embur",
+  "item.forgero.ether": "Ether",
+  "item.forgero.fir": "Fir",
+  "item.forgero.green_enchanted": "Green Enchanted Wood",
+  "item.forgero.holly": "Holly",
+  "item.forgero.imparius": "Imparius",
+  "item.forgero.jacaranda": "Jacaranda",
+  "item.forgero.lament": "Lament",
+  "item.forgero.mahogany": "Mahogany",
+  "item.forgero.nightshade": "Nightshade",
+  "item.forgero.palm": "Palm",
+  "item.forgero.pine": "Pine",
+  "item.forgero.rainbow_eucalyptus": "Rainbow Eucalyptus",
+  "item.forgero.redwood": "Redwood",
+  "item.forgero.skyris": "Skyris",
+  "item.forgero.sythian": "Sythian",
+  "item.forgero.white_mangrove": "White Mangrove",
+  "item.forgero.witch_hazel": "Witch Hazel",
+  "item.forgero.zelkova": "Zelkova"
 }
-
