chore: Update `en_us` language entries for BYG enchanted wood types

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -130,7 +130,7 @@
   "item.forgero.stick": "Stick",
   "item.forgero.aspen": "Aspen",
   "item.forgero.baobab": "Baobab",
-  "item.forgero.blue_enchanted": "Blue Enchanted Wood",
+  "item.forgero.blue_enchanted": "Blue Enchanted Wooden",
   "item.forgero.bulbis": "Bulbis",
   "item.forgero.cika": "Cika",
   "item.forgero.cypress": "Cypress",
@@ -138,7 +138,7 @@
   "item.forgero.embur": "Embur",
   "item.forgero.ether": "Ether",
   "item.forgero.fir": "Fir",
-  "item.forgero.green_enchanted": "Green Enchanted Wood",
+  "item.forgero.green_enchanted": "Green Enchanted Wooden",
   "item.forgero.holly": "Holly",
   "item.forgero.imparius": "Imparius",
   "item.forgero.jacaranda": "Jacaranda",
