* Fixed %s in material count

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -120,7 +120,7 @@
   "tooltip.forgero.section.ingredients": "Ingredients",
   "tooltip.forgero.section.features": "Features",
   "tooltip.forgero.section.conditions": "Conditions",
-  "tooltip.forgero.material_count": "Materials: %s",
+  "tooltip.forgero.material_count": "Materials: ",
   "tooltip.forgero.hold": "Hold [",
   "tooltip.forgero.shift": "Shift",
   "tooltip.forgero.to_show_attributes": "] to show attributes",
