* Changed getRootProperties to include context and target * Added normal attribute tooltips to states that can contain composite attributes

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -160,6 +160,7 @@
   "tooltip.forgero.tag.minecraft.mineable.shovel": "Shovel",
   "tooltip.forgero.tag.minecraft.mineable.hoe": "Hoe",
   "tooltip.forgero.tag.minecraft.mineable.sword": "Sword",
+  "tooltip.forgero.tag.minecraft.pig": "Pigs",
   "tooltip.forgero.tag.forgero.vein_mining_ores": "Ores",
   "tooltip.forgero.tag.forgero.vein_mining_sand": "Sand",
   "tooltip.forgero.tag.forgero.vein_mining_dirt": "Dirt",
