* Fixed the predicate writer

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -154,6 +154,9 @@
   "tooltip.forgero.attribute.armor": "Armor",
   "tooltip.forgero.attribute.weight": "Weight",
   "tooltip.forgero.against": "Against: ",
+  "tooltip.forgero.in": "In: ",
+  "tooltip.forgero.on": "On: ",
+  "tooltip.forgero.when": "When: ",
   "tooltip.forgero.list_separator": "Against: ",
   "tooltip.forgero.tag.minecraft.mineable.pickaxe": "Pickaxe",
   "tooltip.forgero.tag.minecraft.mineable.axe": "Axe",
