* Fixed frequent attribute cache invalidations * Added BlockPredicate checks

--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -14,6 +14,8 @@
   "item.forgero.ender": "Ender",
   "item.forgero.stone_heart": "Stoneheart",
   "item.forgero.blazed_stone_heart": "Blazed Stoneheart",
+  "tag.minecraft.base_stone_nether": "Nether stones",
+  "tag.minecraft.base_stone_overworld": "Stones",
   "item.forgero.magnetico": "Magnetico",
   "item.forgero.quartz": "Quartz",
   "item.forgero.tsuba_sword_guard": "Tsuba Guard",
