* Added an indentation to the feature if they are written with titles

--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -99,6 +99,6 @@
   "item.forgero.constantan": "Constantan",
   "item.forgero.therrassium": "Therrassium",
   "feature.forgero.magnetic.title": "Magnetic",
-  "feature.forgero.magnetic.description": "Draws item towards you"
+  "feature.forgero.magnetic.description": "Draws items towards you"
 }
 
