--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -18,6 +18,26 @@
   "item.forgero.diamond_gem_3": "Diamond Gem Level 3",
   "item.forgero.diamond_gem_4": "Diamond Gem Level 4",
   "item.forgero.diamond_gem_5": "Diamond Gem Level 5",
+  "item.forgero.quartz_gem_1": "Quartz Gem Level 1",
+  "item.forgero.quartz_gem_2": "Quartz Gem Level 2",
+  "item.forgero.quartz_gem_3": "Quartz Gem Level 3",
+  "item.forgero.quartz_gem_4": "Quartz Gem Level 4",
+  "item.forgero.quartz_gem_5": "Quartz Gem Level 5",
+  "item.forgero.emerald_gem_1": "Emerald Gem Level 1",
+  "item.forgero.emerald_gem_2": "Emerald Gem Level 2",
+  "item.forgero.emerald_gem_3": "Emerald Gem Level 3",
+  "item.forgero.emerald_gem_4": "Emerald Gem Level 4",
+  "item.forgero.emerald_gem_5": "Emerald Gem Level 5",
+  "item.forgero.prismarine_gem_1": "Prismarine Gem Level 1",
+  "item.forgero.prismarine_gem_2": "Prismarine Gem Level 2",
+  "item.forgero.prismarine_gem_3": "Prismarine Gem Level 3",
+  "item.forgero.prismarine_gem_4": "Prismarine Gem Level 4",
+  "item.forgero.prismarine_gem_5": "Prismarine Gem Level 5",
+  "item.forgero.lapis_gem_1": "Lapis Lazuli Gem Level 1",
+  "item.forgero.lapis_gem_2": "Lapis Lazuli Gem Level 2",
+  "item.forgero.lapis_gem_3": "Lapis Lazuli Gem Level 3",
+  "item.forgero.lapis_gem_4": "Lapis Lazuli Gem Level 4",
+  "item.forgero.lapis_gem_5": "Lapis Lazuli Gem Level 5",
   "item.forgero.echo_gem_1": "Echo Gem Level 1",
   "item.forgero.echo_gem_2": "Echo Gem Level 2",
   "item.forgero.echo_gem_3": "Echo Gem Level 3",
