* Fixed predicate implementation for base features * Added Column, Radius and Pattern block selectors * Added block filters for selectors * Tweaked previous BlockBreakHandler to work with the new feature

--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -99,9 +99,8 @@
   "item.forgero.constantan": "Constantan",
   "item.forgero.therrassium": "Therrassium",
   "feature.forgero.magnetic.title": "Magnetic",
-  "feature.forgero.magnetic.description1": "Draws items towards you",
-  "feature.forgero.magnetic.description2": "Because more",
-  "feature.forgero.magnetic.description3": "lines are",
-  "feature.forgero.magnetic.description4": "COOOOOOOL"
+  "feature.forgero.magnetic.description": "Draws items towards you",
+  "feature.forgero.vein_mining.title": "Vein Mining",
+  "feature.forgero.ore_vein_mining.description": "Mines ore in a radius"
 }
 
