--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -116,5 +116,7 @@
   "condition.forgero.tough": "Tough",
   "condition.forgero.trimmed": "Trimmed",
   "condition.forgero.rare": "Rare",
-  "condition.forgero.unbreakable": "Unbreakable"
+  "condition.forgero.unbreakable": "Unbreakable",
+  "feature.forgero.emissive": "Emissive",
+  "feature.forgero.emissive.description": "Lights up the surrounding area"
 }
