--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -118,5 +118,18 @@
   "condition.forgero.rare": "Rare",
   "condition.forgero.unbreakable": "Unbreakable",
   "feature.forgero.emissive": "Emissive",
-  "feature.forgero.emissive.description": "Lights up the surrounding area"
+  "feature.forgero.emissive.description": "Lights up the surrounding area",
+  "feature.forgero.golden": "Golden",
+  "feature.forgero.golden.description": "Piglins will not attack you",
+  "entity.flag.sneaking": "Sneaking",
+  "entity.flag.on_fire": "On Fire",
+  "entity.flag.sprinting": "Sprinting",
+  "entity.flag.swimming": "Swimming",
+  "entity.flag.baby": "Baby",
+  "tooltip.forgero.when": "When: ",
+  "tooltip.forgero.wearing": "When wearing: ",
+  "tooltip.forgero.on": "On: ",
+  "tooltip.forgero.on": "In: ",
+  "tooltip.forgero.is": "Is: ",
+  "tooltip.forgero.against": "Against: "
 }
