--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -129,7 +129,7 @@
   "tooltip.forgero.when": "When: ",
   "tooltip.forgero.wearing": "When wearing: ",
   "tooltip.forgero.on": "On: ",
-  "tooltip.forgero.on": "In: ",
+  "tooltip.forgero.in": "In: ",
   "tooltip.forgero.is": "Is: ",
   "tooltip.forgero.against": "Against: "
 }
