--- a/fabric/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,21 +1,43 @@
 {
-  "forgero.menu.options": "Forgero configuration",
-  "forgero.menu.options.error": "Error...",
-  "forgero.menu.options.reset": "Reset",
-  "forgero.menu.options.true": "True",
-  "forgero.menu.options.false": "False",
-  "forgero.menu.options.reload_config": "Reload config from disk",
-  "forgero.menu.options.disabledResources": "Disabled resources",
-  "forgero.menu.options.disabledPacks": "Disabled packs",
-  "forgero.menu.options.disableVanillaRecipes": "Disable vanilla recipes",
-  "forgero.menu.options.disableVanillaLoot": "Disable vanilla loot",
-  "forgero.menu.options.disableVanillaTools": "Disable vanilla tools",
-  "forgero.menu.options.convertVanillaRecipesToForgeroTools": "Vanilla recipes to Forgero tools",
-  "forgero.menu.options.convertVanillaToolLoot": "Convert vanilla tool loot",
-  "forgero.menu.options.enableUnbreakableTools": "Enable unbreakable tools",
-  "forgero.menu.options.enableRepairKits": "Enable repair kits",
-  "forgero.menu.options.resourceLogging": "Resource logging",
-  "forgero.menu.options.logDisabledPackages": "Log disabled packages",
-  "forgero.menu.options.useEntityAttributes": "Entity attributes",
-  "forgero.menu.options.baseSoulLevelRequirement": "Base soul level"
+  "forgero.config.title": "Forgero Configuration",
+  "forgero.config.category.main.title": "Main",
+  "forgero.config.category.main.title.tooltip": "Forgero's main settings.",
+  "forgero.config.disabledResources": "Disabled resources",
+  "forgero.config.disabledResources.tooltip": "Resources that shouldn't be loaded by Forgero.",
+  "forgero.config.disabledPacks": "Disabled packs",
+  "forgero.config.disabledPacks.tooltip": "Packs that shouldn't be loaded by Forgero.",
+  "forgero.config.group.main.title": "Main",
+  "forgero.config.group.main.title.tooltip": "Configuration for recipes, upgrades, and loot.",
+  "forgero.config.disableVanillaRecipes": "Disable vanilla recipes",
+  "forgero.config.disableVanillaRecipes.tooltip": "Disables Minecraft's vanilla tool recipes.",
+  "forgero.config.enableCustomRecipeDeletion": "Enable custom recipe deletion",
+  "forgero.config.enableCustomRecipeDeletion.tooltip": "Enables deletion of recipes via custom IDs, using a datapack system.",
+  "forgero.config.enableRecipesForAllSchematics": "Enable recipes for all schematics",
+  "forgero.config.enableRecipesForAllSchematics.tooltip": "Enables recipes for all schematics, making all schematics craftable.",
+  "forgero.config.enableUpgradeInCraftingTable": "Enable upgrade in crafting table",
+  "forgero.config.enableUpgradeInCraftingTable.tooltip": "Enables upgrading tools in a crafting table, for example, from wood to metal.",
+  "forgero.config.disableVanillaLoot": "Disable vanilla loot",
+  "forgero.config.disableVanillaLoot.tooltip": "Stops vanilla tools from appearing in vanilla/modded loot pools.",
+  "forgero.config.disableVanillaTools": "Disable vanilla tools",
+  "forgero.config.disableVanillaTools.tooltip": "Disables crafting recipes of vanilla tools.",
+  "forgero.config.convertVanillaRecipesToForgeroTools": "Convert vanilla recipes to Forgero tools",
+  "forgero.config.convertVanillaRecipesToForgeroTools.tooltip": "Repurposes vanilla tool recipes to create Forgero tools instead of vanilla tools.",
+  "forgero.config.convertVanillaToolLoot": "Convert vanilla tool loot",
+  "forgero.config.convertVanillaToolLoot.tooltip": "Swaps vanilla tools with Forgero tools when they appear in vanilla/modded loot pools.",
+  "forgero.config.enableUnbreakableTools": "Enable unbreakable tools",
+  "forgero.config.enableUnbreakableTools.tooltip": "Makes tools never break when having 0 durability, instead giving them the broken status and allowing the tools to be repaired.",
+  "forgero.config.enableRepairKits": "Enable repair kits",
+  "forgero.config.enableRepairKits.tooltip": "Enables repair kits, used for storing materials in a pouch, for quick and easy repair of your tools on the go.",
+  "forgero.config.category.debug.title": "Debug",
+  "forgero.config.category.debug.title.tooltip": "Debug settings for debugging issues and adding new features to Forgero.",
+  "forgero.config.group.debug.title": "Debug",
+  "forgero.config.group.debug.title.tooltip": "Debug settings for debugging issues and adding new features to Forgero.",
+  "forgero.config.resourceLogging": "Resource logging",
+  "forgero.config.resourceLogging.tooltip": "Enables resource logging to the log file.",
+  "forgero.config.logDisabledPackages": "Log disabled packages",
+  "forgero.config.logDisabledPackages.tooltip": "Enables logging of disabled packages to the log file.",
+  "forgero.config.exportGeneratedTextures": "Export generated textures",
+  "forgero.config.exportGeneratedTextures.tooltips": "Enables exporting of generated textures to a directory on game startup.",
+  "forgero.config.useEntityAttributes": "Use entity attributes",
+  "forgero.config.baseSoulLevelRequirement": "Base soul level requirement"
 }
