--- a/fabric/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -6,8 +6,8 @@
   "forgero.config.disabledResources.tooltip": "Resources that shouldn't be loaded by Forgero.",
   "forgero.config.disabledPacks": "Disabled packs",
   "forgero.config.disabledPacks.tooltip": "Packs that shouldn't be loaded by Forgero.",
-  "forgero.config.group.main.title": "Main",
-  "forgero.config.group.main.title.tooltip": "Configuration for recipes, upgrades, and loot.",
+  "forgero.config.group.recipes_upgrades_and_loot.title": "Recipes, upgrades, and loot",
+  "forgero.config.group.recipes_upgrades_and_loot.title.tooltip": "Configuration for recipes, upgrades, and loot.",
   "forgero.config.disableVanillaRecipes": "Disable vanilla recipes",
   "forgero.config.disableVanillaRecipes.tooltip": "Disables Minecraft's vanilla tool recipes.",
   "forgero.config.enableCustomRecipeDeletion": "Enable custom recipe deletion",
@@ -24,10 +24,34 @@
   "forgero.config.convertVanillaRecipesToForgeroTools.tooltip": "Repurposes vanilla tool recipes to create Forgero tools instead of vanilla tools.",
   "forgero.config.convertVanillaToolLoot": "Convert vanilla tool loot",
   "forgero.config.convertVanillaToolLoot.tooltip": "Swaps vanilla tools with Forgero tools when they appear in vanilla/modded loot pools.",
+  "forgero.config.group.repairing.title": "Repairing",
+  "forgero.config.group.repairing.title.tooltip": "Configuration for tool repairing.",
   "forgero.config.enableUnbreakableTools": "Enable unbreakable tools",
   "forgero.config.enableUnbreakableTools.tooltip": "Makes tools never break when having 0 durability, instead giving them the broken status and allowing the tools to be repaired.",
   "forgero.config.enableRepairKits": "Enable repair kits",
   "forgero.config.enableRepairKits.tooltip": "Enables repair kits, used for storing materials in a pouch, for quick and easy repair of your tools on the go.",
+  "forgero.config.group.attributes.title": "Attributes",
+  "forgero.config.group.attributes.title.tooltip": "Configuration for tool attributes.",
+  "forgero.config.baseSoulLevelRequirement": "Base soul level requirement",
+  "forgero.config.baseSoulLevelRequirement.tooltip": "The base level needed to apply souls to tools.",
+  "forgero.config.useEntityAttributes": "Use entity attributes",
+  "forgero.config.useEntityAttributes.tooltip": "Enables entity attributes for tools, which have special functionality.",
+  "forgero.config.showAttributeDifference": "Show attribute differences",
+  "forgero.config.showAttributeDifference.tooltip": "Shows differences between attributes on tools' tooltips, using arrows, colors, and numbers behind parentheses.",
+  "forgero.config.hideRarity": "Hide rarity",
+  "forgero.config.hideRarity.tooltip": "Hides the rarity of tools in their tooltips.",
+  "forgero.config.weightReducesAttackSpeed": "Weight reduces attack speed",
+  "forgero.config.weightReducesAttackSpeed.tooltip": "Makes weight reduce the attack speed of tools.",
+  "forgero.config.minimumAttackSpeed": "Minimum attack speed",
+  "forgero.config.minimumAttackSpeed.tooltip": "The minimum attack speed tools must have.",
+  "forgero.config.weightIncreasesHunger": "Weight increases hunger",
+  "forgero.config.weightIncreasesHunger.tooltip": "Makes the weight of tools increase hunger.",
+  "forgero.config.weightIncreasesHungerScalar": "Weight increases hunger scalar",
+  "forgero.config.weightIncreasesHungerScalar.tooltip": "Makes weight increase hunger caused by using heavy tools using a scalar.",
+  "forgero.config.weightIncreasesHungerBaseChance": "Weight increases hunger base chance",
+  "forgero.config.weightIncreasesHungerBaseChance.tooltip": "The base chance for the weight of tools to cause hunger.",
+  "forgero.config.weightIncreasesHungerCenterPoint": "Weight increases hunger center point",
+  "forgero.config.weightIncreasesHungerCenterPoint.tooltip": "Makes weight increase the center point of hunger caused by using heavy tools.",
   "forgero.config.category.debug.title": "Debug",
   "forgero.config.category.debug.title.tooltip": "Debug settings for debugging issues and adding new features to Forgero.",
   "forgero.config.group.debug.title": "Debug",
@@ -38,6 +62,10 @@
   "forgero.config.logDisabledPackages.tooltip": "Enables logging of disabled packages to the log file.",
   "forgero.config.exportGeneratedTextures": "Export generated textures",
   "forgero.config.exportGeneratedTextures.tooltips": "Enables exporting of generated textures to a directory on game startup.",
-  "forgero.config.useEntityAttributes": "Use entity attributes",
-  "forgero.config.baseSoulLevelRequirement": "Base soul level requirement"
+  "forgero.config.category.performance.title": "Performance",
+  "forgero.config.category.performance.title.tooltip": "Performance and threading related settings.",
+  "forgero.config.group.performance.title": "Performance",
+  "forgero.config.group.performance.title.tooltip": "Performance and threading related settings.",
+  "forgero.config.buildModelsAsync": "Build models async",
+  "forgero.config.buildModelsAsync.tooltip": "Builds models asynchronously (off-thread) so the game's main server thread and render thread aren't blocked during model building."
 }
