chore: Improve config tooltips

--- a/fabric/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -15,7 +15,7 @@
   "forgero.config.enableRecipesForAllSchematics": "Enable recipes for all schematics",
   "forgero.config.enableRecipesForAllSchematics.tooltip": "Enables recipes for all schematics, making all schematics craftable.",
   "forgero.config.enableUpgradeInCraftingTable": "Enable upgrade in crafting table",
-  "forgero.config.enableUpgradeInCraftingTable.tooltip": "Enables upgrading tools in a crafting table, for example, from wood to metal.",
+  "forgero.config.enableUpgradeInCraftingTable.tooltip": "Enables upgrading parts and tools in a crafting table. If disabled, tools can only be upgraded in a smithing table.",
   "forgero.config.disableVanillaLoot": "Disable vanilla loot",
   "forgero.config.disableVanillaLoot.tooltip": "Stops vanilla tools from appearing in vanilla/modded loot pools.",
   "forgero.config.disableVanillaTools": "Disable vanilla tools",
@@ -33,9 +33,9 @@
   "forgero.config.group.attributes.title": "Attributes",
   "forgero.config.group.attributes.title.tooltip": "Configuration for tool attributes.",
   "forgero.config.baseSoulLevelRequirement": "Base soul level requirement",
-  "forgero.config.baseSoulLevelRequirement.tooltip": "The base level needed to apply souls to tools.",
+  "forgero.config.baseSoulLevelRequirement.tooltip": "The base experience needed to level up a soul by one level.",
   "forgero.config.useEntityAttributes": "Use entity attributes",
-  "forgero.config.useEntityAttributes.tooltip": "Enables entity attributes for tools, which have special functionality.",
+  "forgero.config.useEntityAttributes.tooltip": "Shows attributes such as the tool's mining speed, mining level, and durability in the attributes section on the tool's tooltip.",
   "forgero.config.showAttributeDifference": "Show attribute differences",
   "forgero.config.showAttributeDifference.tooltip": "Shows differences between attributes on tools' tooltips, using arrows, colors, and numbers behind parentheses.",
   "forgero.config.hideRarity": "Hide rarity",
