[Feature]: Replace the custom config GUI with a YACL implementation (#806)
* feat: Replace custom config GUI with a YACL implementation

* feat: Add config entries to the GUI and add a debug category

* refactor: Re-add list config options to the GUI

* refactor: Re-add config saving to the GUI

* fix: Set default value of `enableRepairKits` to `true` in the GUI

* chore: Add/update the config GUI's language entries

* fix: Fix parent mod ID

This fixes the display of Forgero and its packs in Mod Menu.

* Revert "fix: Fix parent mod ID"

This reverts commit 2c713c5616706e5935d391de93bc16ea8de45e54.

* fix: Fix `forgero-fabric-core`'s parent mod ID

* fix: Fix typo with `forgero-fabric-core`'s parent mod ID

* Switched from mixin to using official api for setting config to the fabric wrapper mod

* Added parent modmenu config to all child mods

* refactor: Remove unused config `en_us` translation file in the bows module

* Improved description for all mods

* refactor: Re-add remaining missing config options to the config GUI

Also renamed a config option to adhere to the naming scheme.

* refactor: Make YACL optional

* chore: Change module descriptions for consistency

* chore: Fix capital letter typo

* chore: Improve config tooltips

* refactor: Split the config screen builder into multiple methods

---------

Co-authored-by: sigmund <sigmundsgranaas@gmail.com>

--- a/fabric/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,21 +1,71 @@
 {
-  "forgero.menu.options": "Forgero configuration",
-  "forgero.menu.options.error": "Error...",
-  "forgero.menu.options.reset": "Reset",
-  "forgero.menu.options.true": "True",
-  "forgero.menu.options.false": "False",
-  "forgero.menu.options.reload_config": "Reload config from disk",
-  "forgero.menu.options.disabledResources": "Disabled resources",
-  "forgero.menu.options.disabledPacks": "Disabled packs",
-  "forgero.menu.options.disableVanillaRecipes": "Disable vanilla recipes",
-  "forgero.menu.options.disableVanillaLoot": "Disable vanilla loot",
-  "forgero.menu.options.disableVanillaTools": "Disable vanilla tools",
-  "forgero.menu.options.convertVanillaRecipesToForgeroTools": "Vanilla recipes to Forgero tools",
-  "forgero.menu.options.convertVanillaToolLoot": "Convert vanilla tool loot",
-  "forgero.menu.options.enableUnbreakableTools": "Enable unbreakable tools",
-  "forgero.menu.options.enableRepairKits": "Enable repair kits",
-  "forgero.menu.options.resourceLogging": "Resource logging",
-  "forgero.menu.options.logDisabledPackages": "Log disabled packages",
-  "forgero.menu.options.useEntityAttributes": "Entity attributes",
-  "forgero.menu.options.baseSoulLevelRequirement": "Base soul level"
+  "forgero.config.title": "Forgero Configuration",
+  "forgero.config.category.main.title": "Main",
+  "forgero.config.category.main.title.tooltip": "Forgero's main settings.",
+  "forgero.config.disabledResources": "Disabled resources",
+  "forgero.config.disabledResources.tooltip": "Resources that shouldn't be loaded by Forgero.",
+  "forgero.config.disabledPacks": "Disabled packs",
+  "forgero.config.disabledPacks.tooltip": "Packs that shouldn't be loaded by Forgero.",
+  "forgero.config.group.recipes_upgrades_and_loot.title": "Recipes, upgrades, and loot",
+  "forgero.config.group.recipes_upgrades_and_loot.title.tooltip": "Configuration for recipes, upgrades, and loot.",
+  "forgero.config.disableVanillaRecipes": "Disable vanilla recipes",
+  "forgero.config.disableVanillaRecipes.tooltip": "Disables Minecraft's vanilla tool recipes.",
+  "forgero.config.enableCustomRecipeDeletion": "Enable custom recipe deletion",
+  "forgero.config.enableCustomRecipeDeletion.tooltip": "Enables deletion of recipes via custom IDs, using a datapack system.",
+  "forgero.config.enableRecipesForAllSchematics": "Enable recipes for all schematics",
+  "forgero.config.enableRecipesForAllSchematics.tooltip": "Enables recipes for all schematics, making all schematics craftable.",
+  "forgero.config.enableUpgradeInCraftingTable": "Enable upgrade in crafting table",
+  "forgero.config.enableUpgradeInCraftingTable.tooltip": "Enables upgrading parts and tools in a crafting table. If disabled, tools can only be upgraded in a smithing table.",
+  "forgero.config.disableVanillaLoot": "Disable vanilla loot",
+  "forgero.config.disableVanillaLoot.tooltip": "Stops vanilla tools from appearing in vanilla/modded loot pools.",
+  "forgero.config.disableVanillaTools": "Disable vanilla tools",
+  "forgero.config.disableVanillaTools.tooltip": "Disables crafting recipes of vanilla tools.",
+  "forgero.config.convertVanillaRecipesToForgeroTools": "Convert vanilla recipes to Forgero tools",
+  "forgero.config.convertVanillaRecipesToForgeroTools.tooltip": "Repurposes vanilla tool recipes to create Forgero tools instead of vanilla tools.",
+  "forgero.config.convertVanillaToolLoot": "Convert vanilla tool loot",
+  "forgero.config.convertVanillaToolLoot.tooltip": "Swaps vanilla tools with Forgero tools when they appear in vanilla/modded loot pools.",
+  "forgero.config.group.repairing.title": "Repairing",
+  "forgero.config.group.repairing.title.tooltip": "Configuration for tool repairing.",
+  "forgero.config.enableUnbreakableTools": "Enable unbreakable tools",
+  "forgero.config.enableUnbreakableTools.tooltip": "Makes tools never break when having 0 durability, instead giving them the broken status and allowing the tools to be repaired.",
+  "forgero.config.enableRepairKits": "Enable repair kits",
+  "forgero.config.enableRepairKits.tooltip": "Enables repair kits, used for storing materials in a pouch, for quick and easy repair of your tools on the go.",
+  "forgero.config.group.attributes.title": "Attributes",
+  "forgero.config.group.attributes.title.tooltip": "Configuration for tool attributes.",
+  "forgero.config.baseSoulLevelRequirement": "Base soul level requirement",
+  "forgero.config.baseSoulLevelRequirement.tooltip": "The base experience needed to level up a soul by one level.",
+  "forgero.config.useEntityAttributes": "Use entity attributes",
+  "forgero.config.useEntityAttributes.tooltip": "Shows attributes such as the tool's mining speed, mining level, and durability in the attributes section on the tool's tooltip.",
+  "forgero.config.showAttributeDifference": "Show attribute differences",
+  "forgero.config.showAttributeDifference.tooltip": "Shows differences between attributes on tools' tooltips, using arrows, colors, and numbers behind parentheses.",
+  "forgero.config.hideRarity": "Hide rarity",
+  "forgero.config.hideRarity.tooltip": "Hides the rarity of tools in their tooltips.",
+  "forgero.config.weightReducesAttackSpeed": "Weight reduces attack speed",
+  "forgero.config.weightReducesAttackSpeed.tooltip": "Makes weight reduce the attack speed of tools.",
+  "forgero.config.minimumAttackSpeed": "Minimum attack speed",
+  "forgero.config.minimumAttackSpeed.tooltip": "The minimum attack speed tools must have.",
+  "forgero.config.weightIncreasesHunger": "Weight increases hunger",
+  "forgero.config.weightIncreasesHunger.tooltip": "Makes the weight of tools increase hunger.",
+  "forgero.config.weightIncreasesHungerScalar": "Weight increases hunger scalar",
+  "forgero.config.weightIncreasesHungerScalar.tooltip": "Makes weight increase hunger caused by using heavy tools using a scalar.",
+  "forgero.config.weightIncreasesHungerBaseChance": "Weight increases hunger base chance",
+  "forgero.config.weightIncreasesHungerBaseChance.tooltip": "The base chance for the weight of tools to cause hunger.",
+  "forgero.config.weightIncreasesHungerCenterPoint": "Weight increases hunger center point",
+  "forgero.config.weightIncreasesHungerCenterPoint.tooltip": "Makes weight increase the center point of hunger caused by using heavy tools.",
+  "forgero.config.category.debug.title": "Debug",
+  "forgero.config.category.debug.title.tooltip": "Debug settings for debugging issues and adding new features to Forgero.",
+  "forgero.config.group.debug.title": "Debug",
+  "forgero.config.group.debug.title.tooltip": "Debug settings for debugging issues and adding new features to Forgero.",
+  "forgero.config.resourceLogging": "Resource logging",
+  "forgero.config.resourceLogging.tooltip": "Enables resource logging to the log file.",
+  "forgero.config.logDisabledPackages": "Log disabled packages",
+  "forgero.config.logDisabledPackages.tooltip": "Enables logging of disabled packages to the log file.",
+  "forgero.config.exportGeneratedTextures": "Export generated textures",
+  "forgero.config.exportGeneratedTextures.tooltips": "Enables exporting of generated textures to a directory on game startup.",
+  "forgero.config.category.performance.title": "Performance",
+  "forgero.config.category.performance.title.tooltip": "Performance and threading related settings.",
+  "forgero.config.group.performance.title": "Performance",
+  "forgero.config.group.performance.title.tooltip": "Performance and threading related settings.",
+  "forgero.config.buildModelsAsync": "Build models async",
+  "forgero.config.buildModelsAsync.tooltip": "Builds models asynchronously (off-thread) so the game's main server thread and render thread aren't blocked during model building."
 }
