Added translations Added arrow slots and handles in renderer.

--- a/fabric/modules/bows/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/modules/bows/src/main/resources/assets/forgero/lang/en_us.json
@@ -2,6 +2,7 @@
   "itemGroup.forgero.gems": "Gems",
   "itemGroup.forgero.trinkets": "Trinkets",
   "itemGroup.forgero.materials": "Materials",
+  "itemGroup.forgero.bows": "Bows & Arrows",
   "item.forgero.dragon_scale": "Dragon Scale",
   "item.forgero.gem": "Gem",
   "item.forgero.soul": "Soul",
@@ -63,6 +64,17 @@
   "description.forgero.refined_shovel_head": "A classic, but significantly improved shovel head",
   "item.forgero.mastercrafted_shovel_head": "Mastercrafted Shovel Head",
   "description.forgero.mastercrafted_shovel_head": "A truly masterfully designed shovel head, better in every way",
+  "item.forgero.mastercrafted_arrow_head": "Mastercrafted Arrow Head",
+  "item.forgero.refined_arrow_head": "Refined Arrow Head",
+  "item.forgero.arrow_head": "Arrow Head",
+  "item.forgero.mastercrafted_bow_limb": "Mastercrafted Bow Limb",
+  "item.forgero.longbow_limb": "Longbow Limb",
+  "item.forgero.refined_bow_limb": "Refined Bow Limb",
+  "item.forgero.bow_limb": "Bow Limb",
+  "item.forgero.shortbow_limb": "Shortbow Limb",
+  "item.forgero.arrow": "Arrow",
+  "item.forgero.mastercrafted_bow": "Mastercrafted Bow",
+  "item.forgero.bow": "Bow",
   "item.forgero.adamantite": "Adamantite",
   "item.forgero.aquarium": "Aquarium",
   "item.forgero.banglum": "Banglum",
