Fix Arrows Attributes being Broken

--- a/fabric/modules/bows/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/modules/bows/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "itemGroup.forgero.bows": "Bows & Arrows",
   "item.forgero.mastercrafted_arrow_head": "Mastercrafted Arrow Head",
+  "item.forgero.mastercrafted_arrow": "Mastercrafted Arrow",
   "item.forgero.refined_arrow_head": "Refined Arrow Head",
   "item.forgero.arrow_head": "Arrow Head",
   "item.forgero.mastercrafted_bow_limb": "Mastercrafted Bow Limb",
