--- a/fabric/modules/bows/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/modules/bows/src/main/resources/assets/forgero/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.forgero.mastercrafted_arrow_head": "Mastercrafted Arrow Head",
   "item.forgero.mastercrafted_arrow": "Mastercrafted Arrow",
   "item.forgero.refined_arrow_head": "Refined Arrow Head",
+  "item.forgero.refined_arrow": "Refined Arrow",
   "item.forgero.arrow_head": "Arrow Head",
   "item.forgero.mastercrafted_bow_limb": "Mastercrafted Bow Limb",
   "item.forgero.longbow_limb": "Longbow Limb",
