* Added new names to the different bow variations

--- a/fabric/modules/bows/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/modules/bows/src/main/resources/assets/forgero/lang/en_us.json
@@ -10,6 +10,9 @@
   "item.forgero.shortbow_limb": "Shortbow Limb",
   "item.forgero.arrow": "Arrow",
   "item.forgero.mastercrafted_bow": "Mastercrafted Bow",
+  "item.forgero.refined_bow": "Refined Bow",
+  "item.forgero.longbow": "Longbow",
+  "item.forgero.shortbow": "Shortbow",
   "item.forgero.bow": "Bow",
   "tooltip.forgero.attribute.forgero:accuracy": "Accuracy",
   "tooltip.forgero.attribute.forgero:draw_speed": "Draw speed",
