upgrades category lang strings + a few misc fixes

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -239,7 +239,63 @@
   "book.forgero.guidebook.getting_started.disassembly_station.title2": "How to use it",
   "book.forgero.guidebook.getting_started.disassembly_station.text2": "How it works is pretty straight forward. If you put in a full [#](1e0099)Tool[#]() you get back the parts its made out of. When inserting only a [#](1e0099)Tool part[#]() you get back some of the materials used crafting it.",
   "book.forgero.guidebook.getting_started.disassembly_station.text3": "There it is :)",
-  "book.forgero.guidebook.getting_started.shortcut.name": "Upgrading Your Tool further!",
+  "book.forgero.guidebook.getting_started.shortcut.name": "Upgrading Your Tool Further!",
   "book.forgero.guidebook.getting_started.shortcut.description": "The basics on Tool Slots and more!",
-  "book.forgero.guidebook.category.upgrading": "Upgrading"
+  "book.forgero.guidebook.category.upgrading": "Upgrading",
+  "book.forgero.guidebook.upgrading.upgrade_station.name": "Taking Your Tools To The Next Level",
+  "book.forgero.guidebook.upgrading.upgrade_station.description": "The Basics On The Upgrade Station!",
+  "book.forgero.guidebook.upgrading.upgrade_station.text": "",
+  "book.forgero.guidebook.upgrading.upgrade_station.title": "",
+  "book.forgero.guidebook.upgrading.stats.name": "Stats And What They Mean",
+  "book.forgero.guidebook.upgrading.stats.description": "A mystery unraveled",
+  "book.forgero.guidebook.upgrading.stats.text": "",
+  "book.forgero.guidebook.upgrading.stats.title": "",
+  "book.forgero.guidebook.upgrading.stats.text1": "",
+  "book.forgero.guidebook.upgrading.stats.title1": "",
+  "book.forgero.guidebook.upgrading.weight.name": "Weight On Tools And Materials",
+  "book.forgero.guidebook.upgrading.weight.description": "weight description here",
+  "book.forgero.guidebook.upgrading.weight.text": "",
+  "book.forgero.guidebook.upgrading.weight.title": "",
+  "book.forgero.guidebook.upgrading.slots.name": "Tools And Their Slots",
+  "book.forgero.guidebook.upgrading.slots.description": "You can always have more",
+  "book.forgero.guidebook.upgrading.slots.text": "",
+  "book.forgero.guidebook.upgrading.slots.title": "",
+  "book.forgero.guidebook.upgrading.utility.name": "Utility Slots",
+  "book.forgero.guidebook.upgrading.utility.description": "Sneaky upgrades",
+  "book.forgero.guidebook.upgrading.utility.text": "",
+  "book.forgero.guidebook.upgrading.utility.title": "",
+  "book.forgero.guidebook.upgrading.binding.name": "Bindings",
+  "book.forgero.guidebook.upgrading.binding.description": "Keep your tools together",
+  "book.forgero.guidebook.upgrading.binding.text": "",
+  "book.forgero.guidebook.upgrading.binding.title": "",
+  "book.forgero.guidebook.upgrading.grip.name": "Handle Grip",
+  "book.forgero.guidebook.upgrading.grip.description": "Get a grip",
+  "book.forgero.guidebook.upgrading.grip.text": "",
+  "book.forgero.guidebook.upgrading.grip.title": "",
+  "book.forgero.guidebook.upgrading.cosmetic.name": "Dyes",
+  "book.forgero.guidebook.upgrading.cosmetic.description": "Make your tool stand out!",
+  "book.forgero.guidebook.upgrading.cosmetic.text": "",
+  "book.forgero.guidebook.upgrading.cosmetic.title": "",
+  "book.forgero.guidebook.upgrading.trinket.name": "Trinket Slots",
+  "book.forgero.guidebook.upgrading.trinket.description": "trinket description here",
+  "book.forgero.guidebook.upgrading.trinket.text": "",
+  "book.forgero.guidebook.upgrading.trinket.title": "",
+  "book.forgero.guidebook.upgrading.gems.name": "Gems",
+  "book.forgero.guidebook.upgrading.gems.description": "Not just for decoration",
+  "book.forgero.guidebook.upgrading.gems.text": "",
+  "book.forgero.guidebook.upgrading.gems.title": "",
+  "book.forgero.guidebook.upgrading.offensive.name": "Offensive Slots",
+  "book.forgero.guidebook.upgrading.offensive.description": "Harder, better, faster, stronger",
+  "book.forgero.guidebook.upgrading.offensive.text": "",
+  "book.forgero.guidebook.upgrading.offensive.title": "",
+  "book.forgero.guidebook.upgrading.reinforcement.name": "Reinforcements",
+  "book.forgero.guidebook.upgrading.reinforcement.description": "Have your tool outlive you",
+  "book.forgero.guidebook.upgrading.reinforcement.text": "",
+  "book.forgero.guidebook.upgrading.reinforcement.title": "",
+  "book.forgero.guidebook.upgrading.pommel.name": "Pommels",
+  "book.forgero.guidebook.upgrading.pommel.description": "pommel description here",
+  "book.forgero.guidebook.upgrading.pommel.text": "",
+  "book.forgero.guidebook.upgrading.pommel.title": "",
+  "book.forgero.guidebook.upgrading.back_to_crafting.name": "Back To Crafting",
+  "book.forgero.guidebook.upgrading.back_to_crafting.description": "Refresh on the basics"
 }
