* Removed level 1 naming from gems * Added a loot table entry for diamond gems * Added Reach to tooltip attributes

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -37,6 +37,7 @@
   "item.forgero.mining_level": "Mining level",
   "item.forgero.rarity": "Rarity",
   "item.forgero.mining_speed": "Mining speed",
+  "item.forgero.forgero:reach": "Reach",
   "item.forgero.armor": "Armor",
   "item.forgero.slots": "Slots",
   "item.forgero.attributes": "Attributes",
@@ -154,6 +155,7 @@
   "tooltip.forgero.attribute.attack_speed": "Attack Speed",
   "tooltip.forgero.attribute.armor": "Armor",
   "tooltip.forgero.attribute.weight": "Weight",
+  "tooltip.forgero.attribute.forgero:reach": "Reach",
   "tooltip.forgero.against": "Against: ",
   "tooltip.forgero.in": "In: ",
   "tooltip.forgero.on": "On: ",
