--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -144,6 +144,13 @@
   "item.forgero.pick_mattock_head": "Pick Mattock Head",
   "item.forgero.pick_mattock": "Pick Mattock",
   "item.forgero.kunai_blade": "Kunai Blade",
-  "item.forgero.kunai": "Kunai"
+  "item.forgero.kunai": "Kunai",
+  "item.forgero.spear_head": "Spear Head",
+  "item.forgero.spear": "Spear",
+  "item.forgero.war_hammer_head": "War Hammer Head",
+  "item.forgero.war_hammer": "War Hammer",
+  "item.forgero.scythe_blade": "Scythe Blade",
+  "item.forgero.scythe": "Scythe",
+  "item.forgero.battle_axe": "Battle Axe"
 }
 
