[Feature] ALL MODEL FILES ARE IN FOR VERSION 1.0

--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -151,6 +151,7 @@
   "item.forgero.war_hammer": "War Hammer",
   "item.forgero.scythe_blade": "Scythe Blade",
   "item.forgero.scythe": "Scythe",
-  "item.forgero.battle_axe": "Battle Axe"
+  "item.forgero.battle_axe": "Battle Axe",
+  "item.forgero.soft_plant": "Soft Plants"
 }
 
