--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -38,6 +38,7 @@
   "item.forgero.rarity": "Rarity",
   "item.forgero.mining_speed": "Mining speed",
   "item.forgero.armor": "Armor",
+  "item.forgero.forgero:reach": "Reach",
   "item.forgero.slots": "Slots",
   "item.forgero.attributes": "Attributes",
   "item.forgero.properties": "Properties",
@@ -154,6 +155,7 @@
   "tooltip.forgero.attribute.attack_speed": "Attack Speed",
   "tooltip.forgero.attribute.armor": "Armor",
   "tooltip.forgero.attribute.weight": "Weight",
+  "tooltip.forgero.attribute.forgero:reach": "Reach",
   "tooltip.forgero.against": "Against: ",
   "tooltip.forgero.in": "In: ",
   "tooltip.forgero.on": "On: ",
