--- a/fabric/modules/bows/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/modules/bows/src/main/resources/assets/forgero/lang/en_us.json
@@ -18,6 +18,10 @@
   "item.forgero.bow": "Bow",
   "item.forgero.crossbow": "Crossbow",
   "item.forgero.crossbow_stock": "Crossbow Stock",
+  "item.forgero.mastercrafted_crossbow_stock": "Mastercrafted Crossbow Stock",
+  "item.forgero.refined_crossbow_stock": "Refined Crossbow Stock",
+  "item.forgero.mastercrafted_crossbow": "Mastercrafted Crossbow",
+  "item.forgero.refined_crossbow": "Refined Crossbow",
   "item.forgero.stirrup": "Stirrup",
   "tooltip.forgero.attribute.forgero:accuracy": "Accuracy",
   "tooltip.forgero.attribute.forgero:draw_speed": "Draw speed",
