--- a/fabric/modules/smithing-rework/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/modules/smithing-rework/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,4 +1,8 @@
 {
   "itemgroup.smithing": "Smithing",
-  "block.forgero.smithing_anvil": "Smithing Anvil"
+  "block.forgero.smithing_anvil": "Smithing Anvil",
+  "block.forgero.bloomery": "Bloomery",
+  "item.forgero.crucible": "Crucible",
+  "item.forgero.clay_crucible": "Clay Crucible",
+  "item.forgero.tongs": "Tongs"
 }
